Bug 172985 - Kopete crashed suddenly... backtrace attached
Summary: Kopete crashed suddenly... backtrace attached
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 132450 160548 169622 170883 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-10-16 21:12 UTC by Dan
Modified: 2008-10-16 21:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dan 2008-10-16 21:12:20 UTC
Version:           svn (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

Application: Kopete (kopete), signal SIGSEGV
Using host libthread_db library "/lib64/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 140282338912000 (LWP 3488)]
[New Thread 1103579472 (LWP 3497)]
[New Thread 1089485136 (LWP 3496)]
[KCrash handler]
#5  Kopete::Contact::setOnlineStatus (this=0x0, status=@0x24a0a80)
    at /usr/local/src/svn/kdenetwork/kopete/libkopete/kopetecontact.cpp:140
#6  0x00007f9602fa08fd in Kopete::Account::setAllContactsStatus (
    this=0x23aafa0, status=@0x24a0a80)
    at /usr/local/src/svn/kdenetwork/kopete/libkopete/kopeteaccount.cpp:519
#7  0x00007f95f4d87742 in MSNAccount::slotNotifySocketClosed (this=0x23aafa0)
    at /usr/local/src/svn/kdenetwork/kopete/protocols/msn/msnaccount.cpp:432
#8  0x00007f95f4d92b47 in MSNAccount::qt_metacall (this=0x23aafa0, 
    _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, 
    _a=0x7fff0efeb010)
    at /usr/local/src/svn/kdenetwork/b/kopete/protocols/msn/msnaccount.moc:134
#9  0x00007f960499130c in QMetaObject::activate (sender=0x1eb4f00, 
    from_signal_index=<value optimized out>, to_signal_index=7, argv=0x2ea7690)
    at kernel/qobject.cpp:3028
#10 0x00007f95f4d9fd68 in MSNSocket::slotSocketError (this=0x1eb4f00, 
    error=<value optimized out>)
    at /usr/local/src/svn/kdenetwork/kopete/protocols/msn/msnsocket.cpp:192
#11 0x00007f95f4da2493 in MSNSocket::qt_metacall (this=0x1eb4f00, 
    _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, 
    _a=0x7fff0efeb320)
    at /usr/local/src/svn/kdenetwork/b/kopete/protocols/msn/msnsocket.moc:118
#12 0x00007f95f4db5885 in MSNNotifySocket::qt_metacall (this=0x0, _c=38406784, 
    _id=37400704, _a=0x2ea7690)
    at /usr/local/src/svn/kdenetwork/b/kopete/protocols/msn/msnnotifysocket.moc:105
#13 0x00007f960499130c in QMetaObject::activate (sender=0x2551100, 
    from_signal_index=<value optimized out>, to_signal_index=12, 
    argv=0x2ea7690) at kernel/qobject.cpp:3028
#14 0x00007f9602664561 in QAbstractSocket::error (this=0x0, 
    _t1=QAbstractSocket::RemoteHostClosedError)
    at .moc/release-shared/moc_qabstractsocket.cpp:146
#15 0x00007f9602667c34 in QAbstractSocketPrivate::readFromSocket (
    this=0x23afa50) at socket/qabstractsocket.cpp:990
#16 0x00007f9602667da7 in QAbstractSocketPrivate::canReadNotification (
    this=0x23afa50) at socket/qabstractsocket.cpp:549
#17 0x00007f9602659261 in QReadNotifier::event (this=<value optimized out>, 
    e=0x24a0a80) at socket/qnativesocketengine.cpp:974
#18 0x00007f9605afcacd in QApplicationPrivate::notify_helper (this=0x1a0d160, 
    receiver=0x256fa50, e=0x7fff0efeb830) at kernel/qapplication.cpp:3809
#19 0x00007f9605b046aa in QApplication::notify (this=0x7fff0efebb20, 
    receiver=0x256fa50, e=0x7fff0efeb830) at kernel/qapplication.cpp:3774
#20 0x00007f9604e8989b in KApplication::notify (this=0x7fff0efebb20, 
    receiver=0x256fa50, event=0x7fff0efeb830)
    at /usr/local/src/svn/kdelibs/kdeui/kernel/kapplication.cpp:307
#21 0x00007f960497d35e in QCoreApplication::notifyInternal (
    this=0x7fff0efebb20, receiver=0x256fa50, event=0x7fff0efeb830)
    at kernel/qcoreapplication.cpp:593
#22 0x00007f96049a5059 in socketNotifierSourceDispatch (source=0x1a0f290)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#23 0x00007f95fea6a951 in g_main_context_dispatch ()
   from /usr/local/lib/libglib-2.0.so.0
#24 0x00007f95fea6e02d in g_main_context_iterate ()
   from /usr/local/lib/libglib-2.0.so.0
#25 0x00007f95fea6e1eb in g_main_context_iteration ()
   from /usr/local/lib/libglib-2.0.so.0
#26 0x00007f96049a4def in QEventDispatcherGlib::processEvents (this=0x1a09cd0, 
    flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:325
#27 0x00007f9605b8b8ff in QGuiEventDispatcherGlib::processEvents (this=0x0, 
    flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#28 0x00007f960497bcc2 in QEventLoop::processEvents (
    this=<value optimized out>, flags={i = 251574864})
    at kernel/qeventloop.cpp:149
#29 0x00007f960497be4d in QEventLoop::exec (this=0x7fff0efeba90, flags=
      {i = 251574944}) at kernel/qeventloop.cpp:200
#30 0x00007f960497e28d in QCoreApplication::exec ()
    at kernel/qcoreapplication.cpp:851
#31 0x000000000044873c in main (argc=1, argv=0x7fff0efec8e8)
    at /usr/local/src/svn/kdenetwork/kopete/kopete/main.cpp:102
#0  0x00007f95ff80c1a1 in ?? () from /lib64/libc.so.6
Comment 1 Roman Jarosz 2008-10-16 21:42:35 UTC
SVN commit 872279 by rjarosz:

Fix bug 172985: Kopete crashed suddenly
The d->contacts can have empty entires if [] is used for lookup.

BUG: 172985



 M  +4 -2      kopeteaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=872279
Comment 2 Roman Jarosz 2008-10-16 21:43:49 UTC
SVN commit 872280 by rjarosz:

Backport fix for bug 172985: Kopete crashed suddenly
The d->contacts can have empty entires if [] is used for lookup.

CCBUG: 172985



 M  +4 -2      kopeteaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=872280
Comment 3 Roman Jarosz 2008-10-16 21:46:52 UTC
*** Bug 132450 has been marked as a duplicate of this bug. ***
Comment 4 Roman Jarosz 2008-10-16 21:47:19 UTC
*** Bug 160548 has been marked as a duplicate of this bug. ***
Comment 5 Roman Jarosz 2008-10-16 21:47:58 UTC
*** Bug 169622 has been marked as a duplicate of this bug. ***
Comment 6 Roman Jarosz 2008-10-16 21:48:35 UTC
*** Bug 170883 has been marked as a duplicate of this bug. ***