Fix bug 172985: Kopete crashed suddenly The d->contacts can have empty entires if [] is used for lookup.

BUG: 172985


svn path=/trunk/KDE/kdenetwork/kopete/; revision=872279